//Editor3D.hpp

class Editor3D {
    private:
        
    public:
    
};