//Mesh.hpp
class Mesh {
    private:
        
    public:
        
};
