//Scene.hpp
class Scene {
    
};