//vertex.hpp


class Vertex {
    private:
        
    public:
        
};